--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask==1.1.1
-wheel
-uwsgi
+Flask
+Flask-SQLAlchemy
+flask_login
+werkzeug
+flask_wtf
+wtforms
+wtforms-components
+Flask-Mail
+pytz
